<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="bill_hint">Enter bill amount</string>
    <string name="total_amount">$0</string>
    <string name="tip_amount">$0</string>
    <string name="tip_label">Tip:</string>
    <string name="total_label">"Total: "</string>
    <string name="tip_percent_label">Tip Percent</string>

</resources>
